--- a/index.html
+++ b/index.html
@@ -1,16 +1,32 @@
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
-        <link rel="stylesheet" href="index.css">
-    </head>
-    <body>
-        <div class="container">
-            <div>
-                <h3>HOME</h3>
-            </div>
-            <div>
-                <h3>GUEST</h3>
-            </div>
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
+    />
+    <link rel="stylesheet" href="index.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="column">
+        <h3>HOME</h3>
+        <h2 class="score">0</h2>
+        <div>
+          <button><span class="numbers">+1</span></button>
+          <button><span class="numbers">+2</span></button>
+          <button><span class="numbers">+3</span></button>
         </div>
-        <script src="index.js"></script>
-    </body>
+      </div>
+      <div class="column">
+        <h3>GUEST</h3>
+        <h2 class="score">0</h2>
+        <div>
+          <button><span class="numbers">+1</span></button>
+          <button><span class="numbers">+2</span></button>
+          <button><span class="numbers">+3</span></button>
+        </div>
+      </div>
+    </div>
+    <script src="index.js"></script>
+  </body>
 </html>
