--- a/index.html
+++ b/index.html
@@ -10,23 +10,33 @@
     <div class="container">
       <div class="column">
         <h3>HOME</h3>
-        <h2 class="score">0</h2>
-        <div>
-          <button><span class="numbers">+1</span></button>
-          <button><span class="numbers">+2</span></button>
-          <button><span class="numbers">+3</span></button>
-        </div>
+        <h2 id="home-score">0</h2>
+        <button onclick="increaseHomeScore()">
+          <span class="numbers">+1</span>
+        </button>
+        <button onclick="increaseHomeScore2()">
+          <span class="numbers">+2</span>
+        </button>
+        <button onclick="increaseHomeScore3()">
+          <span class="numbers">+3</span>
+        </button>
       </div>
       <div class="column">
         <h3>GUEST</h3>
-        <h2 class="score">0</h2>
+        <h2 id="guest-score">0</h2>
         <div>
-          <button><span class="numbers">+1</span></button>
-          <button><span class="numbers">+2</span></button>
-          <button><span class="numbers">+3</span></button>
+          <button onclick="increaseGuestScore1()">
+            <span class="numbers">+1</span>
+          </button>
+          <button onclick="increaseGuestScore2()">
+            <span class="numbers">+2</span>
+          </button>
+          <button onclick="increaseGuestScore3()">
+            <span class="numbers">+3</span>
+          </button>
         </div>
       </div>
     </div>
-    <script src="index.js"></script>
+    <script src="/index.js"></script>
   </body>
 </html>
