changed the font, and added a reset button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <button onclick="increaseHomeScore2()">
           <span class="numbers">+2</span>
         </button>
-        <button onclick="increaseHomeScore3()">
+        <button id="button3" onclick="increaseHomeScore3()">
           <span class="numbers">+3</span>
         </button>
       </div>
@@ -33,6 +33,9 @@
           </button>
           <button onclick="increaseGuestScore3()">
             <span class="numbers">+3</span>
+          </button>
+          <button onclick="resetScore()" id="reset-btn" class="numbers">
+            RESET
           </button>
         </div>
       </div>
